--- a/eutiveumsonho/0.1.0/pages_auth_error.js.html
+++ b/eutiveumsonho/0.1.0/pages_auth_error.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: lib/auth.js</title>
+    <title>JSDoc: Source: pages/auth/error.js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: lib/auth.js</h1>
+    <h1 class="page-title">Source: pages/auth/error.js</h1>
 
     
 
@@ -26,89 +26,95 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import { unstable_getServerSession } from "next-auth";
-import { authOptions } from "../pages/api/auth/[...nextauth]";
-import { getInboxCount, getUserByEmail } from "../lib/db/reads";
-import { updateUser } from "../lib/db/writes";
+            <pre class="prettyprint source linenums"><code>import { Box, Button, Card, Heading, Text } from "grommet";
+import Head from "next/head";
+import { useRouter } from "next/router";
+import Clouds from "../../components/clouds";
+import { Logo } from "../../components/logo";
+import { NEXT_AUTH_ERRORS, _NEXT_AUTH_ERRORS } from "../../lib/errors";
+import { useTranslation } from "next-i18next";
+import { serverSideTranslations } from "next-i18next/serverSideTranslations";
 
 /**
- * Must be used on every authenticated page
- *
- * @example
- * export default function Page(props) {
- *   const { serverSession } = props;
- *
- *   if (serverSession?.user) {
- *     return &lt;Authenticated serverSession={serverSession} />;
- *   }
- *
- *   return &lt;NotAuthenticated/>;
- * }
- *
- * export async function getServerSideProps(context) {
- *    return getAuthProps(context);
- * }
+ * This page is shown when the user encounters an error while signing up or signing in.
  */
-export async function getAuthProps(context) {
-  // See https://github.com/nextauthjs/next-auth/pull/4116
-  // and https://github.com/nextauthjs/next-auth/pull/4116/files#diff-4bf6ba46d8704808e8fb66e2c10fc4baf950c7e3b4f9b60dab652b1eb8e54149
-  const session = await unstable_getServerSession(
-    context.req,
-    context.res,
-    authOptions
+export default function Error() {
+  const { query, push, locale } = useRouter();
+  const { t } = useTranslation("errors");
+
+  const { error: errorCode } = query;
+
+  console.error({
+    service: "web",
+    pathname: "/auth/error",
+    component: "VerifyRequest",
+    error_message: _NEXT_AUTH_ERRORS[errorCode],
+  });
+
+  return (
+    &lt;>
+      &lt;Head>
+        &lt;title>{t("errored")}&lt;/title>
+      &lt;/Head>
+      &lt;Clouds />
+      &lt;Box
+        pad="large"
+        align="center"
+        gap="medium"
+        width="large"
+        justify="center"
+        style={{
+          display: "flex",
+          height: "90vh",
+          margin: "auto",
+        }}
+      >
+        &lt;Card
+          pad="large"
+          gap="medium"
+          align="center"
+          background="white"
+          style={{
+            minWidth: "24rem",
+          }}
+        >
+          &lt;Logo />
+          &lt;Heading
+            level={2}
+            style={{
+              marginBottom: 0,
+            }}
+          >
+            {t("errored")}
+          &lt;/Heading>
+          &lt;Text
+            style={{
+              marginBottom: "1.5rem",
+            }}
+          >
+            {NEXT_AUTH_ERRORS[errorCode][locale]}
+          &lt;/Text>
+          &lt;Button
+            key={"back-to-site"}
+            style={{
+              width: "100%",
+            }}
+            onClick={() => push(`/${locale}`)}
+            label={t("back-to-site")}
+            primary
+          />
+        &lt;/Card>
+      &lt;/Box>
+    &lt;/>
   );
-
-  if (!session) {
-    return {
-      props: { serverSession: null },
-    };
-  }
-
-  const inboxCount = await getInboxCount(session.user.email);
-
-  if (!session.user?.name || !session.user?.image) {
-    const userData = await getUserByEmail(session.user.email);
-
-    let remainingUserData = {};
-
-    if (!userData?.name) {
-      remainingUserData = {
-        name: "",
-      };
-    }
-
-    if (!userData?.image) {
-      remainingUserData = {
-        ...remainingUserData,
-        image: `https://avatars.dicebear.com/v2/jdenticon/${session.user.email}.svg`,
-      };
-    }
-
-    await updateUser(userData._id, remainingUserData);
-
-    return {
-      props: {
-        serverSession: {
-          ...session,
-          user: {
-            ...session.user,
-            ...remainingUserData,
-          },
-          inboxCount,
-        },
-      },
-    };
-  }
-
-  return {
-    props: {
-      serverSession: { ...session, inboxCount },
-    },
-  };
 }
 
-export async function getServerSession(req, res) {
-  return await unstable_getServerSession(req, res, authOptions);
+export async function getServerSideProps(context) {
+  return {
+    props: {
+      ...(await serverSideTranslations(context.locale, ["errors", "common"])),
+    },
+  };
 }
 </code></pre>
         </article>
