--- a/eutiveumsonho/0.1.0/pages_publish_[postId].js.html
+++ b/eutiveumsonho/0.1.0/pages_publish_[postId].js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: lib/auth.js</title>
+    <title>JSDoc: Source: pages/publish/[postId].js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: lib/auth.js</h1>
+    <h1 class="page-title">Source: pages/publish/[postId].js</h1>
 
     
 
@@ -26,89 +26,85 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import { unstable_getServerSession } from "next-auth";
-import { authOptions } from "../pages/api/auth/[...nextauth]";
-import { getInboxCount, getUserByEmail } from "../lib/db/reads";
-import { updateUser } from "../lib/db/writes";
+            <pre class="prettyprint source linenums"><code>import CreateOrEdit from "../../containers/create-or-edit";
+import { getAuthProps } from "../../lib/auth";
+import { getDreamById } from "../../lib/db/reads";
+import Head from "next/head";
+import { getUserAgentProps } from "../../lib/user-agent";
+import { serverSideTranslations } from "next-i18next/serverSideTranslations";
+import { useTranslation } from "next-i18next";
 
 /**
- * Must be used on every authenticated page
+ * The page for editing a dream. This page is only accessible for logged in users.
+ * This page is used for creating dreams. Once the dream is synced to the cloud, it redirects
+ * the user to another page that looks exactly the same as this, which is used for editing dreams.
  *
- * @example
- * export default function Page(props) {
- *   const { serverSession } = props;
- *
- *   if (serverSession?.user) {
- *     return &lt;Authenticated serverSession={serverSession} />;
- *   }
- *
- *   return &lt;NotAuthenticated/>;
- * }
- *
- * export async function getServerSideProps(context) {
- *    return getAuthProps(context);
- * }
+ * @param {{ data, serverSession }} props - The props this component gets from getServerSideProps
  */
-export async function getAuthProps(context) {
-  // See https://github.com/nextauthjs/next-auth/pull/4116
-  // and https://github.com/nextauthjs/next-auth/pull/4116/files#diff-4bf6ba46d8704808e8fb66e2c10fc4baf950c7e3b4f9b60dab652b1eb8e54149
-  const session = await unstable_getServerSession(
-    context.req,
-    context.res,
-    authOptions
-  );
+export default function DreamEditor(props) {
+  const { data, ...authProps } = props;
+  const { t } = useTranslation("dashboard");
 
-  if (!session) {
-    return {
-      props: { serverSession: null },
-    };
+  return (
+    &lt;>
+      &lt;Head>
+        &lt;title>{t("edit-dream")}&lt;/title>
+      &lt;/Head>
+      &lt;CreateOrEdit {...authProps} data={data ? JSON.parse(data) : null} />
+    &lt;/>
+  );
+}
+
+export async function getServerSideProps(context) {
+  const authProps = await getAuthProps(context);
+  const { res } = context;
+
+  if (!authProps.props.serverSession) {
+    res.setHeader("location", `/${context.locale}/auth/signin`);
+    res.statusCode = 302;
+    res.end();
   }
 
-  const inboxCount = await getInboxCount(session.user.email);
+  try {
+    const { postId } = context.params;
 
-  if (!session.user?.name || !session.user?.image) {
-    const userData = await getUserByEmail(session.user.email);
+    if (postId) {
+      const data = await getDreamById(postId);
 
-    let remainingUserData = {};
-
-    if (!userData?.name) {
-      remainingUserData = {
-        name: "",
+      return {
+        props: {
+          ...authProps.props,
+          data: JSON.stringify(data),
+          ...getUserAgentProps(context),
+          ...(await serverSideTranslations(context.locale, [
+            "dashboard",
+            "editor",
+            "common",
+          ])),
+        },
       };
     }
-
-    if (!userData?.image) {
-      remainingUserData = {
-        ...remainingUserData,
-        image: `https://avatars.dicebear.com/v2/jdenticon/${session.user.email}.svg`,
-      };
-    }
-
-    await updateUser(userData._id, remainingUserData);
 
     return {
       props: {
-        serverSession: {
-          ...session,
-          user: {
-            ...session.user,
-            ...remainingUserData,
-          },
-          inboxCount,
-        },
+        ...authProps.props,
+        data: null,
+        ...getUserAgentProps(context),
+        ...(await serverSideTranslations(context.locale, [
+          "dashboard",
+          "editor",
+          "common",
+        ])),
       },
     };
+  } catch (error) {
+    console.error({
+      error,
+      service: "web",
+      pathname: "/publish/[postId]",
+      component: "DreamEditor",
+    });
   }
-
-  return {
-    props: {
-      serverSession: { ...session, inboxCount },
-    },
-  };
-}
-
-export async function getServerSession(req, res) {
-  return await unstable_getServerSession(req, res, authOptions);
 }
 </code></pre>
         </article>
