--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Home</h1>
     <ul>
       <!-- @jsdoc-builder-action new-version -->
-      <li><a href="./out/chiron/0.1.0/global.html">out/chiron/0.1.0/global.html</a></li>
+      <li><a href="./chiron/0.1.0/global.html">chiron/0.1.0/global.html</a></li>
     </ul>
   </body>
 </html>
