docs: update docs https://github.com/eutiveumsonho/chiron/commit/1b5d74fcf2d1337923929290294358d75ab15609

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Home</h1>
-    <ul>
+    <li>
       <!-- @jsdoc-builder-action new-version -->
       <li><a href="./chiron/0.1.0/global.html">chiron/0.1.0/global.html</a></li>
-    </ul>
+    </li>
   </body>
 </html>
