docs: update docs https://github.com/eutiveumsonho/eutiveumsonho/commit/2f0ca9f82341f46675dab8de534f980c904aabfd

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.21.1/global.html">eutiveumsonho/1.21.1/global.html</a></li>
       <li><a href="./chiron/0.1.0/global.html">chiron/0.1.0/global.html</a></li>
     </li>
   </body>
