--- a/eutiveumsonho/1.21.1/pages_publish_index.js.html
+++ b/eutiveumsonho/1.21.1/pages_publish_index.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: pages/dreams/[dreamId].js</title>
+    <title>JSDoc: Source: pages/publish/index.js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: pages/dreams/[dreamId].js</h1>
+    <h1 class="page-title">Source: pages/publish/index.js</h1>
 
     
 
@@ -26,135 +26,49 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>/** @module pages/dreams/:dreamId */
-import Head from "next/head";
-import Dream from "../../containers/dream";
+            <pre class="prettyprint source linenums"><code>/** @module pages/publish */
 import { getAuthProps } from "../../lib/auth";
-import { truncate } from "../../lib/strings";
-import {
-  getDreamById,
-  getUserByEmail,
-  getUserById,
-  getComments,
-} from "../../lib/db/reads";
+import CreateOrEdit from "../../containers/create-or-edit";
+import Head from "next/head";
 import { getUserAgentProps } from "../../lib/user-agent";
 import { serverSideTranslations } from "next-i18next/serverSideTranslations";
+import { useTranslation } from "next-i18next";
 
-/**
- * Dream page. This page shows a user's dream.
- *
- * @param {{ data, comments, serverSession }} props - The props this component gets from getServerSideProps
- */
-export default function DreamPage(props) {
-  const { data: rawData, comments: rawComments, ...authProps } = props;
-
-  const data = JSON.parse(rawData);
-  const comments = JSON.parse(rawComments);
+export default function Home(props) {
+  const { t } = useTranslation("editor");
 
   return (
     &lt;>
       &lt;Head>
-        &lt;title>{truncate(data.dream.text, 50, true)}&lt;/title>
+        &lt;title>{t("create-dream")}&lt;/title>
       &lt;/Head>
-      &lt;Dream data={data} comments={comments} {...authProps} />
+      &lt;CreateOrEdit {...props} />
     &lt;/>
   );
 }
 
 export async function getServerSideProps(context) {
   const authProps = await getAuthProps(context);
-  const { res } = context;
 
-  try {
-    const { dreamId } = context.params;
+  if (!authProps.props.serverSession) {
+    const { res } = context;
 
-    if (!authProps.props.serverSession) {
-      const data = await getDreamById(dreamId);
-
-      if (data.visibility === "private") {
-        res.setHeader("location", `/${context.locale}`);
-        res.statusCode = 302;
-        res.end();
-
-        return { props: {} };
-      }
-
-      const user = await getUserById(data.userId);
-      data.user = user;
-
-      const comments = await getComments(dreamId);
-
-      return {
-        props: {
-          ...authProps.props,
-          data: JSON.stringify(data),
-          comments: JSON.stringify(comments),
-          ...getUserAgentProps(context),
-          ...(await serverSideTranslations(context.locale, [
-            "layout",
-            "footer",
-            "common",
-          ])),
-        },
-      };
-    }
-
-    let [data, user] = await Promise.all([
-      getDreamById(dreamId),
-      getUserByEmail(authProps.props.serverSession.user.email),
-    ]);
-
-    const isDreamOwner = user._id.toString() === data.userId.toString();
-
-    if (data.visibility === "private" &amp;&amp; !isDreamOwner) {
-      res.setHeader("location", `/${context.locale}/dreams`);
-      res.statusCode = 302;
-      res.end();
-
-      return {
-        props: {
-          ...getUserAgentProps(context),
-          ...(await serverSideTranslations(context.locale, [
-            "dashboard",
-            "common",
-          ])),
-        },
-      };
-    }
-
-    if (data.visibility === "anonymous") {
-      delete data.userId;
-    } else {
-      if (isDreamOwner) {
-        data.user = user;
-      } else {
-        const user = await getUserById(data.userId);
-        data.user = user;
-      }
-    }
-
-    const comments = await getComments(dreamId);
-
-    return {
-      props: {
-        ...authProps.props,
-        data: JSON.stringify(data),
-        comments: JSON.stringify(comments),
-        ...getUserAgentProps(context),
-        ...(await serverSideTranslations(context.locale, [
-          "dashboard",
-          "common",
-        ])),
-      },
-    };
-  } catch (error) {
-    console.error({
-      error,
-      service: "web",
-      pathname: "/sonhos/[dreamId]",
-      component: "DreamPage",
-    });
+    res.setHeader("location", `/${context.locale}/auth/signin`);
+    res.statusCode = 302;
+    res.end();
   }
+
+  return {
+    props: {
+      ...authProps.props,
+      ...getUserAgentProps(context),
+      ...(await serverSideTranslations(context.locale, [
+        "dashboard",
+        "editor",
+        "common",
+      ])),
+    },
+  };
 }
 </code></pre>
         </article>
