--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.25.0/global.html">eutiveumsonho/1.25.0/global.html</a></li>
       <li><a href="./eutiveumsonho/1.24.0/global.html">eutiveumsonho/1.24.0/global.html</a></li>
       <li><a href="./chiron/1.7.0/global.html">chiron/1.7.0/global.html</a></li>
       <li><a href="./eutiveumsonho/1.23.0/global.html">eutiveumsonho/1.23.0/global.html</a></li>
