--- a/eutiveumsonho/1.25.1/lib_legal_cookies-policy_index.jsx.html
+++ b/eutiveumsonho/1.25.1/lib_legal_cookies-policy_index.jsx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: lib/api/users.js</title>
+    <title>JSDoc: Source: lib/legal/cookies-policy/index.jsx</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: lib/api/users.js</h1>
+    <h1 class="page-title">Source: lib/legal/cookies-policy/index.jsx</h1>
 
     
 
@@ -26,34 +26,25 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>/**
- * Updates the user's data.
- *
- * @param {object} data
- * @returns {Promise&lt;boolean>}
+            <pre class="prettyprint source linenums"><code>import { useRouter } from "next/router";
+import { CookiesPolicyEn } from "./en";
+import { CookiesPolicyPt } from "./pt";
+import { CookiesPolicyEs } from "./es";
+
+/**
+ * TODO: Evaluate if it's best to break these components into
+ * JSONs so we can have a single components pointing to the translations.
  */
-export async function updateUser(data) {
-  const response = await fetch("/api/account", {
-    method: "PATCH",
-    headers: {
-      "Content-Type": "application/json",
-    },
-    body: JSON.stringify(data),
-  });
+const cookiePolicyMap = {
+  en: &lt;CookiesPolicyEn />,
+  pt: &lt;CookiesPolicyPt />,
+  es: &lt;CookiesPolicyEs />,
+};
 
-  if (response.ok) {
-    return true;
-  }
+export function CookiesPolicy() {
+  const { locale } = useRouter();
 
-  console.error({
-    error: await response.text(),
-    response,
-    service: "web",
-    pathname: "/api/account",
-    component: "updateUser",
-  });
-
-  return false;
+  return cookiePolicyMap[locale] ?? &lt;CookiesPolicyEn />;
 }
 </code></pre>
         </article>
