--- a/eutiveumsonho/1.25.1/lib_legal_terms-and-conditions_index.jsx.html
+++ b/eutiveumsonho/1.25.1/lib_legal_terms-and-conditions_index.jsx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: lib/api/users.js</title>
+    <title>JSDoc: Source: lib/legal/terms-and-conditions/index.jsx</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: lib/api/users.js</h1>
+    <h1 class="page-title">Source: lib/legal/terms-and-conditions/index.jsx</h1>
 
     
 
@@ -26,34 +26,25 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>/**
- * Updates the user's data.
- *
- * @param {object} data
- * @returns {Promise&lt;boolean>}
+            <pre class="prettyprint source linenums"><code>import { useRouter } from "next/router";
+import { TermsAndConditionsEn } from "./en";
+import { TermsAndConditionsPt } from "./pt";
+import { TermsAndConditionsEs } from "./es";
+
+/**
+ * TODO: Evaluate if it's best to break these components into
+ * JSONs so we can have a single components pointing to the translations.
  */
-export async function updateUser(data) {
-  const response = await fetch("/api/account", {
-    method: "PATCH",
-    headers: {
-      "Content-Type": "application/json",
-    },
-    body: JSON.stringify(data),
-  });
+const termsAndConditionsMap = {
+  en: &lt;TermsAndConditionsEn />,
+  pt: &lt;TermsAndConditionsPt />,
+  es: &lt;TermsAndConditionsEs />,
+};
 
-  if (response.ok) {
-    return true;
-  }
+export function TermsAndConditions() {
+  const { locale } = useRouter();
 
-  console.error({
-    error: await response.text(),
-    response,
-    service: "web",
-    pathname: "/api/account",
-    component: "updateUser",
-  });
-
-  return false;
+  return termsAndConditionsMap[locale] ?? &lt;TermsAndConditionsEn />;
 }
 </code></pre>
         </article>
