--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.25.2/lib_db_reads.js.html">eutiveumsonho/1.25.2/lib_db_reads.js.html</a></li>
       <li><a href="./eutiveumsonho/1.25.1/lib_db_reads.js.html">eutiveumsonho/1.25.1/lib_db_reads.js.html</a></li>
       <li><a href="./eutiveumsonho/1.25.0/lib_encryption.js.html">eutiveumsonho/1.25.0/lib_encryption.js.html</a></li>
       <li><a href="./chiron/1.7.0/module-tests.html">chiron/1.7.0/module-tests.html</a></li>
