docs: update docs https://github.com/eutiveumsonho/eutiveumsonho/commit/2d5126813e70e50d28da9d6cf4cb4435545a99be

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html">eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html</a></li>
       <li><a href="./eutiveumsonho/1.25.5/module-pages_api_auth_error.html">eutiveumsonho/1.25.5/module-pages_api_auth_error.html</a></li>
       <li><a href="./eutiveumsonho/1.25.3/pages_api_data_comments.js.html">eutiveumsonho/1.25.3/pages_api_data_comments.js.html</a></li>
       <li><a href="./eutiveumsonho/1.25.2/module-pages_api_data_comments.html">eutiveumsonho/1.25.2/module-pages_api_data_comments.html</a></li>
