--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Home</h1>
     <li>
       <!-- @jsdoc-builder-action new-version -->
+      <li><a href="./eutiveumsonho/1.26.0/module-pages_publish__postId.html">eutiveumsonho/1.26.0/module-pages_publish__postId.html</a></li>
       <li><a href="./eutiveumsonho/1.26.0/module-pages_dreams__dreamId.html">eutiveumsonho/1.26.0/module-pages_dreams__dreamId.html</a></li>
       <li><a href="./eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html">eutiveumsonho/1.25.7/module-pages_dreams__dreamId.html</a></li>
       <li><a href="./eutiveumsonho/1.25.5/module-pages_api_auth_error.html">eutiveumsonho/1.25.5/module-pages_api_auth_error.html</a></li>
